--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,67 @@
 .commentButton {
 	margin: 2px;
 }
+
+/* from search widget */
+
+.jimu-widget-gfx{
+  position:relative;
+  width:100%;
+  height:100%;
+  min-width:265px;
+  min-height:279px;
+}
+
+.jimu-widget-gfx>.jimu-tab>.control{
+  margin:-14px -14px 0 -14px;
+}
+
+.jimu-widget-gfx>.jimu-tab>.jimu-viewstack{
+  position: absolute !important;
+  top:45px !important;
+  left:0 !important;
+  right:0 !important;
+  bottom:0 !important;
+  height: auto;
+  margin-bottom:-14px;
+}
+
+.jimu-widget-gfx .search-tab-node{
+  position:absolute !important;
+  width:100% !important;
+  height:auto !important;
+  top:0 !important;
+  bottom:0 !important;
+}
+
+.jimu-widget-gfx .result-div{
+  font-size:14px;
+  padding-left:10px;
+  padding-bottom:5px;
+}
+
+.jimu-widget-gfx .dijitArrowButtonContainer{
+  width: 30px;
+}
+
+.jimu-widget-gfx .dijitSelect{
+  height: 30px;
+  width: 100%;
+}
+
+.jimu-widget-gfx .searchFeaturesIcon{
+  width: 40px;
+  height: 40px;
+  background-repeat: no-repeat;
+  text-align: center;
+  float: left;
+  margin: 10px 11px 12px 11px;
+}
+
+.jimu-widget-gfx .searchFeaturesIcon:hover{
+  background-color: #C0C0C0;
+}
+
+.TabTheme .jimu-widget-gfx .jimu-tab>.control>.tab.jimu-state-selected{
+  border-top: 0;
+}
