--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 	border:1px solid #DDD;
 	width: 40%;
 	margin: 4px;
-	margin-left: 8px;
+	margin-left: 6px;
 	height: 32px;
 	float: left;
 	padding: 0 5px;
@@ -29,8 +29,8 @@
 }
 
 .statusText p {
-	width:65px;
-	margin-left:15px;
+	width: 65px;
+	margin-left: 15px;
 	font-size: 10px;
 	height: 33px;
 	display: table-cell;
@@ -39,10 +39,10 @@
 }
 
 .mblButton, .mblToggleButton, .mblToggleButtonSelected.Selected {
-	font-weight:bold;
-	background-color:#EFEFF3;
-	background-image:none;
-	border:1px solid #DDD;
+	font-weight: bold;
+	background-color: #EFEFF3;
+	background-image: none;
+	border: 1px solid #DDD;
 	text-align: center;
 	color: black;
 }
@@ -58,6 +58,7 @@
 }
 
 /* Template Picker Overrides */
+
 .templatePicker .grid .dojoxGridRow {
 	display: none;
 }
@@ -81,7 +82,9 @@
 	font-size: 16px;
 	font-weight: bold;
 }
+
 /* hack colors... */
+
 .claro .dijitSelectDisabled, .claro .dijitTextBoxDisabled, .claro .dijitTextBoxDisabled .dijitInputContainer {
 	background-color: #FFF !important;
 }
@@ -91,84 +94,75 @@
 }
 
 .esriPopup .contentPane {
-	/*max-width: 280px !important;*/
-	max-height: 700px !important;
+	max-height: 350px !important;
+	overflow-x: hidden;
 }
 
-#divControl, label, table
-{
+#divControl, label, table {
   float: left;
 }
+
 .commentPane {
 	padding: 0px !important;
 }
+
 .commentButtons {
 	float: right;
 }
+
 .commentButton {
 	margin: 2px;
+	padding: 8px;
 }
 
-/* from search widget */
+/* ComboBox */
 
-.jimu-widget-gfx{
-  position:relative;
-  width:100%;
-  height:100%;
-  min-width:265px;
-  min-height:279px;
+.jimu-widget-gfx .dijitComboBox .dijitButtonNode {
+	height: 28px;
 }
 
-.jimu-widget-gfx>.jimu-tab>.control{
-  margin:-14px -14px 0 -14px;
+.jimu-widget-gfx .dijitArrowButtonContainer {
+  width: 20px;
 }
 
-.jimu-widget-gfx>.jimu-tab>.jimu-viewstack{
-  position: absolute !important;
-  top:45px !important;
-  left:0 !important;
-  right:0 !important;
-  bottom:0 !important;
-  height: auto;
-  margin-bottom:-14px;
+.jimu-widget-gfx .dijitComboBox .dijitArrowButtonInner {
+  margin: 5px 0 0 1px;
+  border: 0;
 }
 
-.jimu-widget-gfx .search-tab-node{
-  position:absolute !important;
-  width:100% !important;
-  height:auto !important;
-  top:0 !important;
-  bottom:0 !important;
-}
-
-.jimu-widget-gfx .result-div{
-  font-size:14px;
-  padding-left:10px;
-  padding-bottom:5px;
-}
-
-.jimu-widget-gfx .dijitArrowButtonContainer{
-  width: 30px;
-}
-
-.jimu-widget-gfx .dijitSelect{
+.jimu-widget-gfx .dijitSelect {
   height: 30px;
   width: 100%;
 }
 
-.jimu-widget-gfx .searchFeaturesIcon{
-  width: 40px;
-  height: 40px;
-  background-repeat: no-repeat;
-  text-align: center;
-  float: left;
-  margin: 10px 11px 12px 11px;
+#widget_intersectingCommunity .dijitComboBox .dijitButtonNode {
+	height: 28px;
 }
 
-.jimu-widget-gfx .searchFeaturesIcon:hover{
-  background-color: #C0C0C0;
+#widget_intersectingCommunity .dijitArrowButtonContainer {
+  width: 20px;
 }
 
-.TabTheme .jimu-widget-gfx .jimu-tab>.control>.tab.jimu-state-selected{
-  border-top: 0;
+#widget_intersectingCommunity .dijitComboBox .dijitArrowButtonInner {
+  margin: 5px 0 0 1px;
+  border: 0;
+}
+
+#widget_intersectingCommunity .dijitSelect {
+  height: 30px;
+  width: 100%;
+}
+
+.esriAttributeInspector .atiAttachmentEditor {
+	padding: 0 !important;
+}
+
+.hoverRed {
+	color: blue;
+	cursor: pointer;
+	text-decoration: none !important;
+}
+
+.hoverRed:hover {
+	color: red;
 }
