finished login workflow

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@
 	overflow-x: hidden;
 }
 
+.invitePanel {
+	display: none;
+	padding: 5px;
+	text-align: center;
+}
+
 /* Template Picker Overrides */
 
 .templatePicker .grid .dojoxGridRow {
@@ -220,58 +226,56 @@
 
 /* About Styles */
 
-/*.jimu-widget-gfx .overlay {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  opacity: 0;
-}*/
-
 .loginPane {
 	background-color: white;
   z-index: 999;
   width: 340px;
-  height: 271px;
+  max-height: 320px;
   position: absolute;
   border-radius: 6px;
   overflow: hidden;
   box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.4);
-  text-align: center;
 }
 
-.jimu-widget-gfx .logo {
+.login .loginButtons {
+	margin-bottom: 20px;
+}
+
+.login .jimu-btn {
+	margin: 5px;
+}
+
+.login .logo {
   margin: auto;
   display: block;
-  width: 40px;
-  margin-top:27px;
-  margin-bottom: 25px;
+  width: 150px;
+  margin-top: 20px;
 }
 
-.jimu-widget-gfx .divTitle, .jimu-widget-gfx .version {
-  text-align: center;
-  margin-top: 20px;
+.login .divTitle, .login .version {
+  margin: 20px 20px 0px 20px;
   color: #686868;
 }
 
-.jimu-widget-gfx .divTitle {
-  font-size: 16px;
-}
-
-.jimu-widget-gfx .version {
+.login .divTitle {
   font-size: 14px;
 }
 
-.jimu-widget-gfx .line {
+.center {
+	text-align: center;
+}
+
+.login label {
+	float: none;
+}
+
+.login .version {
+  font-size: 14px;
+}
+
+.login .line {
   margin: 20px 10px;
   height: 0;
   border-bottom: 1px dashed;
 }
-
-/*.jimu-widget-gfx .jimu-btn {
-  float: none;
-  margin: auto;
-  width: 84px;
-}*/
 
