--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,3 @@
-.feedbackStatusButton, .reassignButton {
-	cursor: pointer;
-	font-weight: bold;
-	background-color: #EFEFF3;
-	background-image: none;
-	border: 1px solid #DDD;
-	width: 100px;
-	margin: 4px;
-	margin-left: 6px;
-	height: 32px;
-	float: left;
-	padding: 0 5px;
-}
-
 .statusImg {
 	width: 30px;
 	float: left;
@@ -37,9 +23,30 @@
 	font-weight: bold;
 	background-color: #EFEFF3;
 	background-image: none;
-	border: 1px solid #DDD;
+	/*border: 1px solid #DDD;*/
 	text-align: center;
 	color: black;
+}
+
+.feedbackStatusButton, .reassignButton {
+	cursor: pointer;
+	font-weight: bold;
+	background-color: #EFEFF3;
+	background-image: none;
+	border: 1px solid #DDD;
+	/*border-bottom: 2px solid #DDD;*/
+	width: 100px;
+	margin: 4px;
+	margin-left: 6px;
+	height: 32px;
+	float: left;
+	padding: 0 5px;
+}
+
+.feedbackStatusButton:hover, .reassignButton:hover {
+	border-bottom: 3px solid #CACACA;
+	margin-top: 2px;
+	transition: all .2s ease-in-out;
 }
 
 .buttons {
@@ -139,6 +146,7 @@
 
 .commentButtons {
 	float: right;
+	margin-top: 8px;
 }
 
 .commentButton {
