removed accept invitation from workflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,139 +1,140 @@
 .statusImg {
-	width: 30px;
-	float: left;
-	margin-top: 7px;
-	line-height: 0;
+  width: 30px;
+  float: left;
+  margin-top: 7px;
+  line-height: 0;
 }
 
 .statusText {
-	line-height: 10px;
+  line-height: 10px;
 }
 
 .statusText p {
-	width: 65px;
-	margin-left: 15px;
-	font-size: 10px;
-	height: 33px;
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center;
+  width: 65px;
+  margin-left: 15px;
+  font-size: 10px;
+  height: 33px;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
 }
 
 .mblButton, .mblToggleButton, .mblToggleButtonSelected.Selected {
-	font-weight: bold;
-	background-color: #EFEFF3;
-	background-image: none;
-	/*border: 1px solid #DDD;*/
-	text-align: center;
-	color: black;
+  font-weight: bold;
+  background-color: #EFEFF3;
+  background-image: none;
+  /*border: 1px solid #DDD;*/
+  text-align: center;
+  color: black;
 }
 
 .feedbackStatusButton, .reassignButton {
-	cursor: pointer;
-	font-weight: bold;
-	background-color: #EFEFF3;
-	background-image: none;
-	border: 1px solid #DDD;
-	/*border-bottom: 2px solid #DDD;*/
-	width: 100px;
-	margin: 4px;
-	margin-left: 6px;
-	height: 32px;
-	float: left;
-	padding: 0 5px;
+  cursor: pointer;
+  font-weight: bold;
+  background-color: #EFEFF3;
+  background-image: none;
+  border: 1px solid #DDD;
+  /*border-bottom: 2px solid #DDD;*/
+  width: 100px;
+  margin: 4px;
+  margin-left: 6px;
+  height: 32px;
+  float: left;
+  padding: 0 5px;
 }
 
 .feedbackStatusButton:hover, .reassignButton:hover {
-	border-bottom: 3px solid #CACACA;
-	margin-top: 2px;
-	transition: all .2s ease-in-out;
+  border-bottom: 3px solid #CACACA;
+  margin-top: 2px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 
 .buttons {
-	padding: 0 !important;
-	text-align: right;
+  padding: 0 !important;
+  text-align: right;
 }
 
 .simplePane {
-	width: 280px;
-	overflow-x: hidden;
+  width: 280px;
+  overflow-x: hidden;
 }
 
 .invitePanel {
-	display: none;
-	padding: 5px;
-	text-align: center;
+  display: none;
+  padding: 5px;
+  text-align: center;
 }
 
 /* Template Picker Overrides */
 
 .templatePicker .grid .dojoxGridRow {
-	display: none;
+  display: none;
 }
 
 .templatePicker .grid .dojoxGridRowOdd {
-	background-color: #FFFFFF;
-	display: block;
-	float: left;
-	width: 30%;
+  background-color: #FFFFFF;
+  display: block;
+  float: left;
+  width: 30%;
 }
 
 .templatePicker .dojoxGrid .dojoxGridCell {
-	width: 7em !important;
+  width: 7em !important;
 }
 
 .templatePicker .dojoxGrid {
-	padding-left:	8%;
+  padding-left: 8%;
 }
 
 #provideFeedbackDiv {
-	display: none;
+  display: none;
 }
 
 .widgetTitle {
-	font-size: 14px;
-	font-weight: bold;
-	margin-bottom: -8px;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: -8px;
 }
 
 .signedIn {
-	display: none;
+  display: none;
 }
 
 .esriLegendServiceLabel {
-	font-size: 14px !important;
+  font-size: 14px !important;
 }
 
 .greyHR {
-	height: 1px;
-	border: none;
-	color: #D6D6D6;
-	background-color: #D6D6D6;
+  height: 1px;
+  border: none;
+  color: #D6D6D6;
+  background-color: #D6D6D6;
 }
 
 .narrowHR {
-	margin-left: 7%;
-	margin-right: 7%;
+  margin-left: 7%;
+  margin-right: 7%;
 }
 
 .spacedHR {
-	margin-top: 15px;
-	margin-bottom: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 /* hack colors... */
 
 .claro .dijitSelectDisabled, .claro .dijitTextBoxDisabled, .claro .dijitTextBoxDisabled .dijitInputContainer {
-	background-color: #FFF !important;
+  background-color: #FFF !important;
 }
 
 .dj_webkit .claro .dijitDisabled input {
-	color: black !important;
+  color: black !important;
 }
 
 .esriPopup .contentPane {
-	max-height: 350px !important;
-	overflow-x: hidden;
+  max-height: 350px !important;
+  overflow-x: hidden;
 }
 
 #divControl, label, table {
@@ -141,23 +142,23 @@
 }
 
 .commentPane {
-	padding: 0px !important;
+  padding: 0px !important;
 }
 
 .commentButtons {
-	float: right;
-	margin-top: 8px;
+  float: right;
+  margin-top: 8px;
 }
 
 .commentButton {
-	margin: 2px;
-	padding: 8px;
+  margin: 2px;
+  padding: 8px;
 }
 
 /* ComboBox */
 
 .jimu-widget-gfx .dijitComboBox .dijitButtonNode {
-	height: 28px;
+  height: 28px;
 }
 
 .jimu-widget-gfx .dijitArrowButtonContainer {
@@ -179,7 +180,7 @@
 }
 
 #widget_intersectingCommunity .claro .dijitComboBox .dijitButtonNode {
-	height: 28px;
+  height: 28px;
 }
 
 #widget_intersectingCommunity .claro .dijitComboBox .dijitArrowButtonInner {
@@ -193,64 +194,64 @@
 }
 
 .esriAttributeInspector .atiAttachmentEditor {
-	padding: 0 !important;
+  padding: 0 !important;
 }
 
 .esriAttributeInspector .atiButtons {
-	border: 0 !important;
+  border: 0 !important;
 }
 
 .hoverRed {
-	color: blue;
-	cursor: pointer;
-	text-decoration: none !important;
+  color: blue;
+  cursor: pointer;
+  text-decoration: none !important;
 }
 
 .hoverRed:hover {
-	color: red;
+  color: red;
 }
 
 .editorDiv {
-	width: 100%;
+  width: 100%;
 }
 
 .jimu-widget-gfx .grid {
-	height: 74px;
+  height: 74px;
 }
 
 .jimu-widget-gfx .templatePicker .dojoxGrid {
-	padding-left: 7%;
-	padding-top: 2%;
+  padding-left: 7%;
+  padding-top: 2%;
 }
 
 .sliderDijit {
-	width: 165px;
+  width: 165px;
 }
 
 .noCommentDiv {
-	background-color: #F04A4A;
-	color: white;
+  background-color: #F04A4A;
+  color: white;
 }
 
 /* About Styles */
 
 .loginPane {
-	background-color: white;
+  background-color: white;
   z-index: 999;
   width: 340px;
   max-height: 320px;
   position: absolute;
-  border-radius: 6px;
+  border-radius: 4px;
   overflow: hidden;
   box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.4);
 }
 
 .login .loginButtons {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .login .jimu-btn {
-	margin: 5px;
+  margin: 5px;
 }
 
 .login .logo {
@@ -270,11 +271,11 @@
 }
 
 .center {
-	text-align: center;
+  text-align: center;
 }
 
 .login label {
-	float: none;
+  float: none;
 }
 
 .login .version {
@@ -285,5 +286,22 @@
   margin: 20px 10px;
   height: 0;
   border-bottom: 1px dashed;
+}
+
+.overlay {
+  z-index: 990;
+  -webkit-box-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-pack: center;
+  -webkit-transition: 200ms opacity;
+  background-color: rgba(255, 255, 255, 0.75);
+  bottom: 0;
+  display: -webkit-box;
+  left: 0;
+  overflow: auto;
+  padding: 20px;
+  position: fixed;
+  right: 0;
+  top: 0;
 }
 
